--- a/DustyBookSobre.html
+++ b/DustyBookSobre.html
@@ -36,7 +36,20 @@
           </form>
    </div>
    
-   <div class="grid-item item9">sobre</div>
+   <div class="grid-item item9">
+	<h1>Dusty Book (livro empoeirado)</h1>
+   
+  <br><br>
+
+   <p>A ideia inicial e que em vez de ser um Alfarrábio comum,<br>  
+   e uma plataforma que recebe como doações os livros, e a partir de uma doação,<br>
+   o usuario tem direito a um outro livro no nosso sistema.<br>.
+   <br><br>
+    O usuário diz o livro que o tem interesse, e o que ele quer contribuir,<br> 
+	assim podendo haver trocas e vendas de livros<p>
+
+	
+	</div>
    
    </body>
 </html>
